--- a/index.html
+++ b/index.html
@@ -294,33 +294,29 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Abdullah Shaar (CA)</div>
+            <div class="card-header">Andrej Pozderc (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Sunday: 11:00 - 12:00 </li>
-                <li> Monday: 12:00 - 15:00 </li>
-                <li> Tuesday: 12:00 - 13:00 </li>
-              </ul>
-              E-mail: <a href="mailto:ashaar@andrew.cmu.edu">ashaar@andrew.cmu.edu</a>
+                <li> TBD </li>
+              E-mail: <a href="mailto:apozdera@andrew.cmu.edu">apozdera@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Ward Ayan (CA)</div>
+            <div class="card-header"> Maimoon Siddiqui (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Sunday: 15:00 - 18:00 </li>
-                <li> Monday: 18:00 - 20:00 </li>
+                <li> TBD</li>
               </ul>
-              E-mail: <a href="mailto:warda@andrew.cmu.edu">warda@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:maimoons@andrew.cmu.edu">maimoons@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -329,33 +325,30 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Keivin Isufaj (CA)</div>
+            <div class="card-header">Sara Almohanadi (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Saturday: 10:00 - 13:00 </li>
-                <li> Tuesday: 11:30 - 13:30 </li>
+                <li> TBD </li>
               </ul>
-              E-mail: <a href="mailto:kisufaj@andrew.cmu.edu">kisufaj@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:smohanad@andrew.cmu.edu">salmohanandi@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Arambha Niraula (CA)</div>
+            <div class="card-header">Mohammed Yusuf Ansari (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Sunday: 15:00 - 16:00 </li>
-                <li> Monday: 10:30 - 11:30 and 15:00 - 17:00 </li>
-                <li> Tuesday: 12:00 - 13:00 </li>
+                <li> TBD </li>
               </ul>
-              E-mail: <a href="mailto:aniraula@andrew.cmu.edu">aniraula@andrew.cmu.edu</a>
+              E-mail: <a href="ma1@andrew.cmu.edu">ma1@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -365,36 +358,19 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Samar Rahmouni (CA)</div>
+            <div class="card-header"> Kaustubh Iyer (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Monday: 18:00 - 20:00 </li>
+                <li> TBD </li>
               </ul>
-              E-mail: <a href="mailto:srahmoun@andrew.cmu.edu">srahmoun@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">kiyer@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card border-warning">
-            <div class="card-header">Mohamed Amara (CA)</div>
-            <div class="card-body">
-              <p class="card-text">
-              Office: ARC <br>
-              Office hours:
-              <ul>
-                <li> Monday: 17:00 - 19:00 </li>
-              </ul>
-              E-mail: <a href="mailto:mamara@andrew.cmu.edu">mamara@andrew.cmu.edu</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
 
     <br>
