--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+     <link rel="shortcut icon"
+          type="image/xicon"
+           href="https://web2.qatar.cmu.edu/cs/15110/favicon.png">
+     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133148527-1"></script>
     <script>
@@ -98,8 +102,8 @@
 
         <div class="image-txt-container">
           <p style="float: left; min-width: 0px; vertical-align: middle;">
-	    <h1><b>15-110: Principles of Computing (Fall 2019)</b></h1></p>
-          <p><img src="cover-o.png" width="330"></p>
+	    <h1><b>15-110: Principles of Computing <br> (Fall 2019)</b></h1></p>             
+          <p><img  style="padding-left: 20px"; src="cover-o.png"; width="330"></p>  
         </div>
 
 	<!-- <h1><b>15-110: Principles of Computing (Spring 2019)</b></h1>
