--- a/index.html
+++ b/index.html
@@ -375,8 +375,26 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
 
+      <div class="row">
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header"> Ward Ayan (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours:
+              <ul>
+                <li> TBD </li>
+              </ul>
+              E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">warda@qatar.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     <br>
     <div id="grading" class="container section">
       <h2><b>Grading</b></h2>
