--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               <ul>
                 <li> TBD </li>
               </ul>
-              E-mail: <a href="mailto:smohanad@andrew.cmu.edu">salmohanandi@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:smohanad@andrew.cmu.edu">smohanand@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
