--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <tr>
             <td> Thursdays </td>
             <td> 15:00 to 16:20 </td>
-            <td> 2062 </td>
+            <td> 2035 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
           <td> </td>
@@ -257,10 +257,10 @@
     </div>
     
     <div id="schedule" class="container section">
-        <h2><b>Schedule (Subject to changes)</b></h2>
-        <p>
-      In the table below, labs are in blue, exams are in red and the next
-      lecture/lab is orange. Green days are in the past, and grey days have no lectures.
+      <h2><b>Schedule (Subject to changes)</b></h2>
+      <p>
+	In the table below, labs are in blue, exams are in red and the next
+	lecture/lab is orange. Green days are in the past, and grey days have no lectures.
       </p>
       <table class="table" id="scheduleTable">
       </table>
@@ -304,7 +304,9 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+                <li> Monday: 12:00pm - 13:00pm </li>
+		<li> Wednesday: 12:00pm - 13:00pm </li>
+		<li> Thursday: 12:00pm - 13:30pm </li>
               E-mail: <a href="mailto:apozdera@andrew.cmu.edu">apozdera@andrew.cmu.edu</a>
               </p>
             </div>
@@ -318,7 +320,8 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD</li>
+                <li> Saturday: 1:00pm - 2:30pm </li>
+		<li> Tuesday: 10:00am - 11:30am </li>
               </ul>
               E-mail: <a href="mailto:maimoons@andrew.cmu.edu">maimoons@andrew.cmu.edu</a>
               </p>
@@ -335,7 +338,10 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+                <li> Sunday: 10:00am - 10:30am </li>
+		<li> Monday: 10:30am - 12:00pm </li>
+		<li> Tuesday: 10:00am - 10:30am </li>
+		<li> Wednesday: 10:30am - 12:00pm </li>
               </ul>
               E-mail: <a href="mailto:smohanad@andrew.cmu.edu">smohanand@andrew.cmu.edu</a>
               </p>
@@ -350,50 +356,51 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+                <li> Sunday: 9:30am - 11:00am</li>
+		<li> Monday: 9:30am - 11:00am</li>
               </ul>
               E-mail: <a href="ma1@andrew.cmu.edu">ma1@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-      </div>
+      </div><br>
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> Kaustubh Iyer (CA)</div>
+            <div class="card-header">Kaustubh Iyer (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+		<li> Wednesday: 3:00pm - 4:30pm</li>
+		<li> Thursday: 10:30am - 12:00pm</li>
               </ul>
-              E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">kiyer@andrew.cmu.edu</a>
+	      E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">kiyer@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> Ward Ayan (CA)</div>
+            <div class="card-header">Ward Ayan (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> TBD </li>
+		<li> Tuesday: 5:00pm - 6:30pm</li>
+		<li> Thursday: 1:00pm - 2:30pm</li>
               </ul>
-              E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">warda@qatar.cmu.edu</a>
+	      E-mail: <a href="mailto:warda@qatar.cmu.edu">warda@qatar.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
-      </div>
-      
-    <br>
+      </div><br>
+
+      <br>
     <div id="grading" class="container section">
       <h2><b>Grading</b></h2>
       <p>
