--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
               Office: ARC <br>
               Office hours:
               <ul>
-                <li> Sunday: 10:00am - 12:00pm </li>
-		<li> Tuesday: 10:00am - 12:00pm </li>
+                <li> Sunday: 12:pm - 1:30pm </li>
+		<li> Tuesday: 12:00pm - 1:30pm </li>
               </ul>
               E-mail: <a href="mailto:smohanad@andrew.cmu.edu">smohanand@andrew.cmu.edu</a>
               </p>
