Updating time, place and staff.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
 
     <div id="requisites" class="container section">
-        <h2><b>Prerequisites</b></h2>
+        <h2><b>Pre-requisites</b></h2>
       <p>
         None.
       </p>
@@ -187,21 +187,15 @@
         <tbody>
           <tr>
             <td> Sundays and Tuesdays </td>
-            <td> 15:00 to 16:20pm </td>
-            <td> 2035 </td>
+            <td> 13:30 to 14:50 </td>
+            <td> 2052 </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
-            <td> 15:00 to 16:20 </td>
+            <td> 13:30 to 14:50 </td>
             <td> 2035 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
-          </tr>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <tr>
           </tr>
         </tbody>
       </table>
@@ -223,12 +217,12 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Gianni A. Di Caro (Teacher)</div>
+            <div class="card-header">Giselle Reis (instructor)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: 1007 <br>
+              Office: 1008 <br>
               Office hours: by appointment <br>
-              E-mail: <a href="mailto:gdicaro@cmu.edu">gdicaro@cmu.edu</a>
+              E-mail: <a href="mailto:giselle@cmu.edu">giselle@cmu.edu</a>
               </p>
             </div>
           </div>
@@ -247,6 +241,7 @@
         </div>
         -->
       </div><br>
+      <!--
       <div class="row">
         <div class="col">
           <div class="card border-warning">
@@ -349,8 +344,9 @@
           </div>
         </div>
       </div><br>
-
+      -->
       <br>
+
     <div id="grading" class="container section">
       <h2><b>Grading</b></h2>
       <p>
