--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
           <li class="nav-item">
             <a class="nav-link" href="https://autolab.andrew.cmu.edu/courses/15110q-s20" target="_blank">Autolab <i class="fa fa-external-link"></i></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.gradescope.com/courses/80225" target="_blank">Gradescope <i class="fa fa-external-link"></i></a>
+          </li>
         </ul>
       </div>
     </nav>
