--- a/index.html
+++ b/index.html
@@ -244,76 +244,79 @@
         </div>
         -->
       </div><br>
-      <!--
+      
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Andrej Pozderc (CA)</div>
+            <div class="card-header">Maher Habboub (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD
+              <!--ul>
                 <li> Sunday: 12:00pm - 1:00pm </li>
                 <li> Tuesday: 12:00pm - 1:00pm </li>
                 <li> Thursday: 12:00pm - 1:30pm </li>
-              E-mail: <a href="mailto:apozdera@andrew.cmu.edu">apozdera@andrew.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:mhabboub@andrew.cmu.edu">mhabboub@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> Maimoon Siddiqui (CA)</div>
+            <div class="card-header"> Abdullah Shaar (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD
+              <!--ul>
                 <li> Saturday: 1:00pm - 2:30pm </li>
                 <li> Tuesday: 10:00am - 11:30am </li>
-              </ul>
-              E-mail: <a href="mailto:maimoons@andrew.cmu.edu">maimoons@andrew.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:ashaar@andrew.cmu.edu">ashaar@andrew.cmu.edu </a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
+      
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Sara Almohanadi (CA)</div>
+            <div class="card-header">Dorde Popovic (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD
+              <!--ul>
                 <li> Sunday: 12:pm - 1:30pm </li>
                 <li> Tuesday: 12:00pm - 1:30pm </li>
-              </ul>
-              E-mail: <a href="mailto:smohanad@andrew.cmu.edu">smohanand@andrew.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:dordep@andrew.cmu.edu">dordep@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Mohammed Yusuf Ansari (CA)</div>
+            <div class="card-header">Ammar Karkour (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD
+              <!--ul>
                 <li> Sunday: 9:30am - 11:00am</li>
                 <li> Monday: 9:30am - 11:00am</li>
-              </ul>
-              E-mail: <a href="ma1@andrew.cmu.edu">ma1@andrew.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:akarkour@andrew.cmu.edu">akarkour@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
-      <div class="row">
+
+      <!--div class="row">
         <div class="col">
           <div class="card border-warning">
             <div class="card-header">Kaustubh Iyer (CA)</div>
