--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD
+              Office hours: TBD<br>
               <!--ul>
                 <li> Sunday: 12:00pm - 1:00pm </li>
                 <li> Tuesday: 12:00pm - 1:00pm </li>
@@ -269,7 +269,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD
+              Office hours: TBD<br>
               <!--ul>
                 <li> Saturday: 1:00pm - 2:30pm </li>
                 <li> Tuesday: 10:00am - 11:30am </li>
@@ -288,7 +288,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD
+              Office hours: TBD<br>
               <!--ul>
                 <li> Sunday: 12:pm - 1:30pm </li>
                 <li> Tuesday: 12:00pm - 1:30pm </li>
@@ -304,7 +304,7 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD
+              Office hours: TBD<br>
               <!--ul>
                 <li> Sunday: 9:30am - 11:00am</li>
                 <li> Monday: 9:30am - 11:00am</li>
@@ -316,41 +316,40 @@
         </div>
       </div><br>
 
-      <!--div class="row">
+      <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Kaustubh Iyer (CA)</div>
+            <div class="card-header">Hao Mei (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD<br>
+              <!--ul>
                 <li> Wednesday: 3:00pm - 4:30pm</li>
                 <li> Thursday: 10:30am - 12:00pm</li>
-              </ul>
-              E-mail: <a href="mailto:kkiyer@qatar.cmu.edu">kiyer@andrew.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:haomei@andrew.cmu.edu">haomei@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Ward Ayan (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours:
-              <ul>
+              Office hours: TBD<br>
+              <!--ul>
                 <li> Tuesday: 5:00pm - 6:30pm</li>
                 <li> Thursday: 1:00pm - 2:30pm</li>
-              </ul>
-              E-mail: <a href="mailto:warda@qatar.cmu.edu">warda@qatar.cmu.edu</a>
+              </ul-->
+              E-mail: <a href="mailto:@andrew.cmu.edu"></a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
-      -->
       <br>
 
     <div id="grading" class="container section">
