--- a/index.html
+++ b/index.html
@@ -252,12 +252,11 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Sunday: 12:00pm - 1:00pm </li>
-                <li> Tuesday: 12:00pm - 1:00pm </li>
-                <li> Thursday: 12:00pm - 1:30pm </li>
-              </ul-->
+              Office hours: <br>
+              <ul>
+                <li> Tuesday: 3:00pm - 4:30pm </li>
+                <li> Wednesday: 6:00pm - 7:30pm </li>
+              </ul>
               E-mail: <a href="mailto:mhabboub@andrew.cmu.edu">mhabboub@andrew.cmu.edu</a>
               </p>
             </div>
@@ -269,11 +268,12 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Saturday: 1:00pm - 2:30pm </li>
-                <li> Tuesday: 10:00am - 11:30am </li>
-              </ul-->
+              Office hours: <br>
+              <ul>
+                <li> Tuesday: 5:00pm - 6:30pm </li>
+                <li> Wednesday: 5:00pm - 6:30pm </li>
+                <li> Saturday: 12:00pm - 2:00pm </li>
+              </ul>
               E-mail: <a href="mailto:ashaar@andrew.cmu.edu">ashaar@andrew.cmu.edu </a>
               </p>
             </div>
@@ -288,11 +288,11 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
+              Office hours: <br>
+              <ul>
                 <li> Sunday: 12:pm - 1:30pm </li>
-                <li> Tuesday: 12:00pm - 1:30pm </li>
-              </ul-->
+                <li> Wednesday: 10:30am - 12:00pm </li>
+              </ul>
               E-mail: <a href="mailto:dordep@andrew.cmu.edu">dordep@andrew.cmu.edu</a>
               </p>
             </div>
@@ -300,56 +300,21 @@
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Ammar Karkour (CA)</div>
+            <div class="card-header">Hao Mei (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Sunday: 9:30am - 11:00am</li>
-                <li> Monday: 9:30am - 11:00am</li>
-              </ul-->
-              E-mail: <a href="mailto:akarkour@andrew.cmu.edu">akarkour@andrew.cmu.edu</a>
+              Office hours: <br>
+              <ul>
+                <li> Monday: 3:00pm - 6:00pm</li>
+              </ul>
+              E-mail: <a href="mailto:haomei@andrew.cmu.edu">haomei@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
       </div><br>
 
-      <div class="row">
-        <div class="col">
-          <div class="card border-warning">
-            <div class="card-header">Hao Mei (CA)</div>
-            <div class="card-body">
-              <p class="card-text">
-              Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Wednesday: 3:00pm - 4:30pm</li>
-                <li> Thursday: 10:30am - 12:00pm</li>
-              </ul-->
-              E-mail: <a href="mailto:haomei@andrew.cmu.edu">haomei@andrew.cmu.edu</a>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
-            <div class="card-body">
-              <p class="card-text">
-              Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Tuesday: 5:00pm - 6:30pm</li>
-                <li> Thursday: 1:00pm - 2:30pm</li>
-              </ul-->
-              E-mail: <a href="mailto:@andrew.cmu.edu"></a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div><br>
       <br>
 
     <div id="grading" class="container section">
