Updating course staff

--- a/index.html
+++ b/index.html
@@ -315,6 +315,41 @@
         </div>
       </div><br>
 
+      <div class="row">
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Igli Mlloja (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours: TBD <br>
+              <!--ul>
+                <li> Sunday: 12:pm - 1:30pm </li>
+                <li> Wednesday: 10:30am - 12:00pm </li>
+              </ul-->
+              E-mail: <a href="mailto:imlloja@andrew.cmu.edu">imlloja@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-warning">
+            <div class="card-header">Sideeg Hassan (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours: TBD<br>
+              <!--ul>
+                <li> Monday: 3:00pm - 6:00pm</li>
+              </ul-->
+              E-mail: <a href="mailto:sahassan@andrew.cmu.edu">sahassan@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div><br>
+
+
       <br>
 
     <div id="grading" class="container section">
