--- a/index.html
+++ b/index.html
@@ -322,11 +322,12 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD <br>
-              <!--ul>
-                <li> Sunday: 12:pm - 1:30pm </li>
-                <li> Wednesday: 10:30am - 12:00pm </li>
-              </ul-->
+              Office hours: <br>
+              <ul>
+                <li> Sunday: 6:00pm - 7:30pm</li>
+                <li> Monday: 4:00pm - 6:00pm </li>
+                <li> Wednesday: 4:00pm - 5:00pm</li>
+              </ul>
               E-mail: <a href="mailto:imlloja@andrew.cmu.edu">imlloja@andrew.cmu.edu</a>
               </p>
             </div>
@@ -338,9 +339,11 @@
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
-              Office hours: TBD<br>
-              <!--ul>
-                <li> Monday: 3:00pm - 6:00pm</li>
+              Office hours: <br>
+              <ul>
+                <li> Monday: 10:00am - 12:00pm</li>
+                <li> Tuesday: 12:00pm - 1:00pm</li>
+                <li> Wednesday: 9:30am - 11:00am</li>
               </ul-->
               E-mail: <a href="mailto:sahassan@andrew.cmu.edu">sahassan@andrew.cmu.edu</a>
               </p>
