--- a/lectures/17-dict-II.html
+++ b/lectures/17-dict-II.html
@@ -11796,7 +11796,7 @@ div#notebook {
            "ahmed": [10,10,6,8,4],
            "nour": [9,8,4,6,7],
            "carlos": [10,8,10,5,6],
-           "bob": [10,9,10,8,5]
+           "jane": [10,9,10,8,5]
           }</code></pre>
 <p>then <code>average(grades)</code> should return 37.0.</p>
 
@@ -11943,7 +11943,7 @@ quizzes = { "agata": [6,8,9,8],
 <p>For example, <code>finalGrades(grades)</code> should return the dictionary:</p>
 
 <pre><code>{'ahmed': 38, 
- 'bob': 42, 
+ 'jane': 42, 
  'carlos': 39, 
  'mohammed': 32, 
  'nour': 34}</code></pre>
