Lecture 21: all files

--- a/lectures/21-graphs.html
+++ b/lectures/21-graphs.html
@@ -12850,6 +12850,7 @@ pSgiIlJIpSgiIlJIpSgiIlLo/wEC/LtFe75L/wAAAABJRU5ErkJggg==
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Case-study:-food-web">Case study: food web<a class="anchor-link" href="#Case-study:-food-web">&#182;</a></h2><p>A food web is a networks of preys and predators. This can be naturally represented as a graph by taking each animal to be a node, and edges to be the prey/predator relation. Since this relation is unidirectional, the graph will be directed. The direction chosen is arbitrary, but of course it needs to be consistent. Let's adopt the following convention: there exists an edge from animal A to B if A <em>is eaten by</em> B (that is, B is A's predator).</p>
 <p>We will use adjacency lists to represent our food web. They keys will be the animals and the values will be a list of that animal's preys.</p>
+<p>The file used for this example can be downloaded <a href="https://web2.qatar.cmu.edu/cs/15110/datasets/florida-foodweb.csv">here</a>.</p>
 
 </div>
 </div>
