adapt index.html

--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
           <tr>
             <td> Sundays and Tuesdays </td>
             <td> 13:30 to 14:50 </td>
-            <td> 2052 </td>
+            <td> ONLINE </td>
             <td> <span class="badge badge-secondary">lectures</span> </td>
           </tr>
           <tr>
             <td> Thursdays </td>
             <td> 13:30 to 14:50 </td>
-            <td> 2035 </td>
+            <td> In-presence, 1064 </td>
             <td> <span class="badge badge-secondary">labs</span> </td>
           </tr>
         </tbody>
@@ -220,12 +220,12 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Giselle Reis (instructor)</div>
+            <div class="card-header">Gianni Di Caro (instructor)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: 1008 <br>
+              Office: 1007 <br>
               Office hours: by appointment <br>
-              E-mail: <a href="mailto:giselle@cmu.edu">giselle@cmu.edu</a>
+              E-mail: <a href="mailto:gdicaro@cmu.edu">gdicaro@cmu.edu</a>
               </p>
             </div>
           </div>
@@ -248,7 +248,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Maher Habboub (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -257,14 +257,14 @@
                 <li> Tuesday: 3:00pm - 4:30pm </li>
                 <li> Wednesday: 6:00pm - 7:30pm </li>
               </ul>
-              E-mail: <a href="mailto:mhabboub@andrew.cmu.edu">mhabboub@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> Abdullah Shaar (CA)</div>
+            <div class="card-header"> TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -274,7 +274,7 @@
                 <li> Wednesday: 5:00pm - 6:30pm </li>
                 <li> Saturday: 12:30pm - 2:00pm </li>
               </ul>
-              E-mail: <a href="mailto:ashaar@andrew.cmu.edu">ashaar@andrew.cmu.edu </a>
+              E-mail: <a href="mailto:"> </a>
               </p>
             </div>
           </div>
@@ -284,7 +284,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Dorde Popovic (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -293,14 +293,14 @@
                 <li> Sunday: 12:pm - 1:30pm </li>
                 <li> Wednesday: 10:30am - 12:00pm </li>
               </ul>
-              E-mail: <a href="mailto:dordep@andrew.cmu.edu">dordep@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Hao Mei (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -308,7 +308,7 @@
               <ul>
                 <li> Monday: 3:00pm - 6:00pm</li>
               </ul>
-              E-mail: <a href="mailto:haomei@andrew.cmu.edu">haomei@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
@@ -318,7 +318,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Igli Mlloja (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -328,14 +328,14 @@
                 <li> Monday: 4:00pm - 6:00pm </li>
                 <li> Wednesday: 4:00pm - 5:00pm</li>
               </ul>
-              E-mail: <a href="mailto:imlloja@andrew.cmu.edu">imlloja@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Sideeg Hassan (CA)</div>
+            <div class="card-header">TBD (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -345,7 +345,7 @@
                 <li> Tuesday: 12:00pm - 1:00pm</li>
                 <li> Wednesday: 9:30am - 11:00am</li>
               </ul-->
-              E-mail: <a href="mailto:sahassan@andrew.cmu.edu">sahassan@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
