change index/schedule add lecture

--- a/index.html
+++ b/index.html
@@ -85,21 +85,22 @@
             <a class="nav-link" href="#policy">Policies</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://piazza.com/cmu/spring2020/15110q" target="_blank">Piazza <i class="fa fa-external-link"></i></a>
+            <a class="nav-link" href="https://piazza.com/class/kk06ethmf7w3r8" target="_blank">Piazza <i class="fa fa-external-link"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://autolab.andrew.cmu.edu/courses/15110q-s20" target="_blank">Autolab <i class="fa fa-external-link"></i></a>
+            <a class="nav-link" href="https://autolab.andrew.cmu.edu/courses/15110q-s21/" target="_blank">Autolab <i class="fa fa-external-link"></i></a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="https://www.gradescope.com/courses/80225" target="_blank">Gradescope <i class="fa fa-external-link"></i></a>
           </li>
+	  -->
         </ul>
       </div>
     </nav>
 
     <br><p>
     <div id="main" class="container section">
-      <h1><b>15-110: Principles of Computing (Spring 2020)</b></h1>
+      <h1><b>15-110: Principles of Computing (Spring 2021)</b></h1>
       <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="And football about foots and balls." src="cover-o.png">
       <p class="text-justify">
       <h2><b>Overview</b></h2>
@@ -244,37 +245,39 @@
         </div>
         -->
       </div><br>
+
+
+
+
+
       
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Samar Rahmouni (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours: <br>
               <ul>
-                <li> Tuesday: 3:00pm - 4:30pm </li>
-                <li> Wednesday: 6:00pm - 7:30pm </li>
+                <li> day: time </li>
               </ul>
-              E-mail: <a href="mailto:"></a>
+              E-mail: <a href="mailto:srahmoun@andrew.cmu.edu">srahmoun@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header"> TBD (CA)</div>
+            <div class="card-header"> Jawaria Abbas (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours: <br>
               <ul>
-                <li> Tuesday: 5:00pm - 6:30pm </li>
-                <li> Wednesday: 5:00pm - 6:30pm </li>
-                <li> Saturday: 12:30pm - 2:00pm </li>
+		<li> day: time </li>
               </ul>
-              E-mail: <a href="mailto:"> </a>
+              E-mail: <a href="mailto:jabbas@andrew.cmu.edu">jabbas@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -284,31 +287,30 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Yusuf Saquib (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours: <br>
               <ul>
-                <li> Sunday: 12:pm - 1:30pm </li>
-                <li> Wednesday: 10:30am - 12:00pm </li>
+		<li> day: time </li>
               </ul>
-              E-mail: <a href="mailto:"></a>
+              E-mail: <a href="mailto:yusufsaquib@cmu.edu">yusufsaquib@cmu.edu</a>
               </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Demetre Devidze (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours: <br>
               <ul>
-                <li> Monday: 3:00pm - 6:00pm</li>
+		<li> day: time </li>		
               </ul>
-              E-mail: <a href="mailto:"></a>
+              E-mail: <a href="mailto:ddevidze@andrew.cmu.edu">ddevidze@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
@@ -318,34 +320,15 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
+            <div class="card-header">Abdalla Mohamed (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
               Office hours: <br>
               <ul>
-                <li> Sunday: 6:00pm - 7:30pm</li>
-                <li> Monday: 4:00pm - 6:00pm </li>
-                <li> Wednesday: 4:00pm - 5:00pm</li>
+		<li> day: time </li>				
               </ul>
-              E-mail: <a href="mailto:"></a>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card border-warning">
-            <div class="card-header">TBD (CA)</div>
-            <div class="card-body">
-              <p class="card-text">
-              Office: ARC <br>
-              Office hours: <br>
-              <ul>
-                <li> Monday: 10:00am - 12:00pm</li>
-                <li> Tuesday: 12:00pm - 1:00pm</li>
-                <li> Wednesday: 9:30am - 11:00am</li>
-              </ul-->
-              E-mail: <a href="mailto:"></a>
+              E-mail: <a href="mailto:abdallam@andrew.cmu.edu">abdallam@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
