--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <br><p>
     <div id="main" class="container section">
       <h1><b>15-110: Principles of Computing (Spring 2021)</b></h1>
-      <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="And football about foots and balls." src="cover-o.png">
+      <img class="img-thumbnail float-right ml-4" style="margin-top: 50px; width:600px" alt="CS quote" src="cover-o.png">
       <p class="text-justify">
       <h2><b>Overview</b></h2>
 
@@ -329,6 +329,20 @@
 		<li> day: time </li>				
               </ul>
               E-mail: <a href="mailto:abdallam@andrew.cmu.edu">abdallam@andrew.cmu.edu</a>
+              </p>
+            </div>
+          </div>
+        </div>
+	<div class="col">
+          <div class="card border-warning">
+            <div class="card-header">TBD (CA)</div>
+            <div class="card-body">
+              <p class="card-text">
+              Office: ARC <br>
+              Office hours: <br>
+              <ul>
+              </ul>
+              E-mail: <a href="mailto:"></a>
               </p>
             </div>
           </div>
