--- a/index.html
+++ b/index.html
@@ -435,11 +435,11 @@
       <h2><b>Tools</b></h2>
       <p>
       Set up your your programming environment by installing
-      the <a href="https://www.anaconda.com/">Anaconda</a> distribution (Pyhton 3.7 version):
+      the <a href="https://www.anaconda.com/products/individual">Anaconda</a> distribution (Pyhton 3.8 version):
       <ul>
-        <li> <a href="https://www.anaconda.com/download/#macos">For MacOS </a></li>
-        <li> <a href="https://www.anaconda.com/download/#windows">For Windows </a></li>
-        <li> <a href="https://www.anaconda.com/download/#linux">For Linux </a></li>
+	<li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-MacOSX-x86_64.pkg">For MacOS </a></li>
+        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-Windows-x86_64.exe">For Windows </a></li>
+        <li> <a href="https://repo.anaconda.com/archive/Anaconda3-2020.11-Linux-x86_64.sh">For Linux </a></li>
       </ul>
       
       The download is big, so make sure you are at a place with fast and 
