--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <div class="row">
         <div class="col">
           <div class="card border-warning">
-            <div class="card-header">Abdalla Mohamed (CA)</div>
+            <div class="card-header">Diram Tabaa (CA)</div>
             <div class="card-body">
               <p class="card-text">
               Office: ARC <br>
@@ -328,7 +328,7 @@
               <ul>
 		<li> day: time </li>				
               </ul>
-              E-mail: <a href="mailto:abdallam@andrew.cmu.edu">abdallam@andrew.cmu.edu</a>
+              E-mail: <a href="mailto:dtabaa@andrew.cmu.edu">dtabaa@andrew.cmu.edu</a>
               </p>
             </div>
           </div>
