--- a/index.html
+++ b/index.html
@@ -246,10 +246,6 @@
         -->
       </div><br>
 
-
-
-
-
       
       <div class="row">
         <div class="col">
@@ -257,10 +253,11 @@
             <div class="card-header">Samar Rahmouni (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: Zoom <br>
               Office hours: <br>
               <ul>
-                <li> day: time </li>
+                <li> Tuesday: 15:00 - 16:00 </li>
+                <li>  Wednesday: 18:00 - 20:00 </li>
               </ul>
               E-mail: <a href="mailto:srahmoun@andrew.cmu.edu">srahmoun@andrew.cmu.edu</a>
               </p>
@@ -272,10 +269,11 @@
             <div class="card-header"> Jawaria Abbas (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: Zoom <br>
               Office hours: <br>
               <ul>
-		<li> day: time </li>
+		<li> Monday: 13:30 - 15:00 </li>
+		<li> Wednesday: 13:30 - 15:00 </li>
               </ul>
               E-mail: <a href="mailto:jabbas@andrew.cmu.edu">jabbas@andrew.cmu.edu</a>
               </p>
@@ -290,10 +288,10 @@
             <div class="card-header">Yusuf Saquib (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: Zoom <br>
               Office hours: <br>
               <ul>
-		<li> day: time </li>
+		<li> Sunday, Tuesday, Thursday: 17:00 - 18:00  </li>
               </ul>
               E-mail: <a href="mailto:yusufsaquib@cmu.edu">yusufsaquib@cmu.edu</a>
               </p>
@@ -305,10 +303,11 @@
             <div class="card-header">Demetre Devidze (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: Zoom <br>
               Office hours: <br>
               <ul>
-		<li> day: time </li>		
+		<li> Sunday: 12:00 - 13:30 </li>
+		<li> Monday: 18:30 - 20:00 </li>				
               </ul>
               E-mail: <a href="mailto:ddevidze@andrew.cmu.edu">ddevidze@andrew.cmu.edu</a>
               </p>
@@ -323,10 +322,11 @@
             <div class="card-header">Diram Tabaa (CA)</div>
             <div class="card-body">
               <p class="card-text">
-              Office: ARC <br>
+              Office: Zoom <br>
               Office hours: <br>
               <ul>
-		<li> day: time </li>				
+                <li> Sunday: 19:00 - 21:00 </li>
+		<li> Wednesday: 10:30 - 11:30 </li>				
               </ul>
               E-mail: <a href="mailto:dtabaa@andrew.cmu.edu">dtabaa@andrew.cmu.edu</a>
               </p>
